--- a/SRteacher/account-student.html
+++ b/SRteacher/account-student.html
@@ -31,7 +31,7 @@
       <nav id="sidebarMenu" class="col-xl-2 d-xl-block bg-white sidebar collapse"> </nav>
       <main class="col-xl-10"> 
         <!-- ------- ------- ------- ------- ------- ------- ------- -->
-        <h2>學生管理</h2>
+        <h2 class="SR-h2"><span>學生管理</span></h2>
         <div class="row py-3 py-xl-5 px-1 px-xl-4"> 
           <!-- 按鈕 start -->
           <div class="col-xxl-5 mb-3" id="blockBtns">
@@ -324,7 +324,7 @@ $(document).ready(function () {
   //call header、footer、 sidebar  
   $('header').load('master_header.html', function () {
     //當前頁名稱顯示
-    $('#currentPage').text($('main h2').text()).addClass('active');
+    $('#currentPage').html($('main .SR-h2').html());
   });
   $('footer').load('master_footer.html');
   $('#sidebarMenu').load('master_sidebar.html', function () {
@@ -332,9 +332,9 @@ $(document).ready(function () {
     $('#sidebarMenu .nav-link[href*="account-student"]').addClass('active');
   });
 
-  const list = $('#accountStudentTable');
+  const $table = $('#accountStudentTable');
   //學生 datatables 
-  list.DataTable({
+  $table.DataTable({
     //serverSide: true,     // 開啟伺服端模式
     processing: true,
     order: [], //取消默認排序icon
@@ -540,7 +540,7 @@ $(document).ready(function () {
     ],
     initComplete: function () {
       //datatable footer input page
-      datatableInputPage(list);
+      datatableInputPage($table);
     }
   });
 
@@ -556,12 +556,12 @@ $(document).ready(function () {
     $('#blockEditBtns').show();
 
     //表格排序 關閉
-    list.find('thead th, thead td')
+    $table.find('thead th, thead td')
       .removeClass('sorting sorting sorting_asc sorting_desc')
       .unbind('click');
 
     //表格欄位 可編輯
-    list.find('input, select').attr('disabled', false).removeClass('readonly');
+    $table.find('input, select').attr('disabled', false).removeClass('readonly');
   });
 
   //[修改資料]>[取消]
@@ -578,20 +578,20 @@ $(document).ready(function () {
     $('#blockEditBtns').hide();
 
     //表格排序 開啟
-    list.find('thead th:not(.sorting_disabled), thead td:not(.sorting_disabled)')
+    $table.find('thead th:not(.sorting_disabled), thead td:not(.sorting_disabled)')
       .addClass('sorting')
       .each(function () {
         let i = $(this).index(),
           c = $(this).attr('class').replace(' sorting', '');
-        list.DataTable().order.listener('.' + c, i);
+        $table.DataTable().order.listener('.' + c, i);
       });
 
     //表格欄位 不可編輯
-    list.find('input, select').attr('disabled', true).addClass('readonly');
+    $table.find('input, select').attr('disabled', true).addClass('readonly');
 
     //若有錯誤紅框，則清除紅框
-    if (list.find('.invalid').length) {
-      list.find('.invalid').removeClass('invalid');
+    if ($table.find('.invalid').length) {
+      $table.find('.invalid').removeClass('invalid');
     }
   });
 
@@ -614,25 +614,25 @@ $(document).ready(function () {
         $('#blockEditBtns').hide();
 
         //表格排序 開啟
-        list.find('thead th:not(.sorting_disabled), thead td:not(.sorting_disabled)')
+        $table.find('thead th:not(.sorting_disabled), thead td:not(.sorting_disabled)')
           .addClass('sorting')
           .each(function () {
             let i = $(this).index(),
               c = $(this).attr('class').replace(' sorting', '');
-            list.DataTable().order.listener('.' + c, i);
+            $table.DataTable().order.listener('.' + c, i);
           });
 
         //表格欄位 不可編輯
-        list.find('input, select').attr('disabled', true).addClass('readonly');
+        $table.find('input, select').attr('disabled', true).addClass('readonly');
 
         //若有錯誤紅框，則清除紅框
-        if (list.find('.invalid').length) {
-          list.find('.invalid').removeClass('invalid');
+        if ($table.find('.invalid').length) {
+          $table.find('.invalid').removeClass('invalid');
         }
       });
     } else { //修改失敗 demo
       alertModal('<div class="text-red">密碼請勿小於4碼！</div>', function () {
-        const invalidInputs = list.find(`tbody tr:nth-child(1) .col-password input,
+        const invalidInputs = $table.find(`tbody tr:nth-child(1) .col-password input,
 												 tbody tr:nth-child(3) .col-password input`).addClass('invalid');
 
         //如有錯誤欄位，則捲動至第一個
@@ -722,11 +722,11 @@ $(document).ready(function () {
 
   //[搜尋]
   $('#btnSearch').click(function () {
-    list.DataTable().search($('#searchKeywords').val()).draw();
+    $table.DataTable().search($('#searchKeywords').val()).draw();
   });
   //[搜尋][X]重置
   $('#searchKeywords + .btn-close').click(function () {
-    list.DataTable().search('').draw();
+    $table.DataTable().search('').draw();
   });
 });
 </script>
