--- a/SRteacher/DACC-session.html
+++ b/SRteacher/DACC-session.html
@@ -30,7 +30,7 @@
       <nav id="sidebarMenu" class="col-xl-2 d-xl-block bg-white sidebar collapse"> </nav>
       <main class="col-xl-10"> 
         <!-- ------- ------- ------- ------- ------- ------- ------- -->
-        <h2>測驗場次管理</h2>
+        <h2 class="SR-h2"><span>測驗場次管理</span></h2>
         <div class="row py-3 py-xl-5 px-1 px-xl-4"> 
           <!-- 按鈕 start -->
           <div class="col-xxl-5 mb-3" id="blockBtns">
@@ -439,15 +439,15 @@
             <!-- 搜尋  end  --> 
             <!-- 勾選 start -->
             <div class="col-xl-12 mb-3">
-              <div class="form-check-inline SRform-check me-3 fs-7">
+              <div class="form-check form-check-inline me-3 fs-7">
                 <input class="form-check-input" type="checkbox" name="showList" id="showList-all" value="" checked>
                 <label class="form-check-label" for="showList-all">顯示所有名單</label>
               </div>
-              <div class="form-check-inline SRform-check me-3 fs-7">
+              <div class="form-check form-check-inline me-3 fs-7">
                 <input class="form-check-input" type="checkbox" name="showList" id="showList-done" value="<span>完成</span>">
                 <label class="form-check-label" for="showList-done">僅顯示完成名單</label>
               </div>
-              <div class="form-check-inline SRform-check me-3 fs-7">
+              <div class="form-check form-check-inline me-3 fs-7">
                 <input class="form-check-input" type="checkbox" name="showList" id="showList-undone" value="<span class='text-red'>未完成</span>">
                 <label class="form-check-label" for="showList-undone">僅顯示未完成名單</label>
               </div>
@@ -591,7 +591,7 @@ $(document).ready(function () {
   //call header、footer、 sidebar  
   $('header').load('master_header.html', function () {
     //當前頁名稱顯示
-    $('#currentPage').text($('main h2').text()).addClass('active');
+    $('#currentPage').html($('main .SR-h2').html());
   });
 	
   $('footer').load('master_footer.html');
@@ -602,10 +602,10 @@ $(document).ready(function () {
   });
 
 	
-  const list = $('#sessionTable');
+  const $table = $('#sessionTable');
 
   //測驗場次 datatables 
-  list.DataTable({
+  $table.DataTable({
     //serverSide: true,     // 開啟伺服端模式
     processing: true,
     order: [], //取消默認排序icon
@@ -727,7 +727,7 @@ $(document).ready(function () {
     ],
     initComplete: function () {
       //datatable footer input page
-      datatableInputPage(list);
+      datatableInputPage($table);
 
       //Enable tooltips
       const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]');
@@ -749,11 +749,11 @@ $(document).ready(function () {
   //[搜尋]
   $('#btnSearch').click(function () {
     console.log($('#searchKeywords').val());
-    list.DataTable().search($('#searchKeywords').val()).draw();
+    $table.DataTable().search($('#searchKeywords').val()).draw();
   });
   //[搜尋][X]重置
   $('#searchKeywords + .btn-close').click(function () {
-    list.DataTable().search('').draw();
+    $table.DataTable().search('').draw();
   });
 
   //[新增場次]
@@ -810,7 +810,7 @@ $(document).ready(function () {
   /////////////////////////////////////////////////
 
   //[設定學生]
-  list.on('click', '.btn-session-studentSet', function () {
+  $table.on('click', '.btn-session-studentSet', function () {
     $('#studentSetModal').modal('show');
 
     //do something... (取得sessionLists行列項目資料)
@@ -1078,7 +1078,7 @@ $(document).ready(function () {
     }
   });
   //[學生名單]
-  list.on('click', '.btn-session-studentLists', function () {
+  $table.on('click', '.btn-session-studentLists', function () {
     $('#studentListsModal').modal('show');
 
     //do something... (取得sessionLists行列項目資料)
@@ -1108,7 +1108,7 @@ $(document).ready(function () {
   /////////////////////////////////////////////////
 
   //[場次設定]
-  list.on('click', '.btn-session-sessionSet', function () {
+  $table.on('click', '.btn-session-sessionSet', function () {
     $('#sessionSetModal').modal('show');
 
     //do something... 取得表格值
