--- a/SRteacher/master_header.html
+++ b/SRteacher/master_header.html
@@ -1,6 +1,10 @@
 <nav class="navbar navbar-expand-xl px-xxl-3">
   <div class="container-fluid"> <a class="navbar-brand" href="index.html">
-    <h1><img src="Content/images/SRlogo.svg" alt="SmartReading" class="SR-logo"/><span class="SR-h1">管理者中心<label   class="SR-h1-current" id="currentPage"></label></span></h1>
+    <h1 class="SR-h1">
+			<div class="SR-logo"><img src="Content/images/SRlogo.svg" alt="SmartReading" class="img-fluid"/></div>
+			<div class="SR-title">管理者中心</div>
+		</h1>
+		<div class="current-page" id="currentPage"></div>
     </a>
     <div class="d-flex align-items-center">
       <div class="nav-item dropdown SR-user"> <a class="nav-link" href="#" data-bs-toggle="dropdown" aria-expanded="false"><label class="SR-user-name">莊老師</label><label class="SR-user-identity">帳號管理者</label></a>
